# edgejs

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  flake.nix  wasmer.toml
.github/workflows/: napi-v8.yml  napi-wasmer.yml  test-and-build.yml
benchmarks/: README.md  run.sh
benchmarks/workloads/: zlib-deflate-sync.js
napi-external/guest/: build-test-native.sh  build-test-wasix.sh  napi_native_init.cc
napi-external/host/: Cargo.toml  build.rs
napi-external/host/src/: lib.rs  main.rs  napi_bridge_init.cc
napi-external/host/tests/: manifest_tests.rs
napi-v8/: CMakeLists.txt  README.md
napi-v8/include/: unofficial_napi.h
napi-v8/src/: js_native_api_v8.cc  node_api_v8.cc  unofficial_napi.cc
napi-v8/tests/: CMakeLists.txt  PORTABILITY_MATRIX.md  README.md
node-lib/: net.js
scripts/: build-wasix.sh  generate_vendored_openssl_cmake.py
src/: builtin_catalog.cc  edge_active_resource.cc  edge_async_wrap.cc  edge_buffer.cc  edge_cares_wrap.cc  edge_cli.cc  edge_compat_exec.cc  edge_environment.cc  edge_environment.h  edge_environment_runtime.cc  edge_errors_binding.cc  edge_fs.cc  edge_handle_wrap.cc  edge_http_parser.cc  edge_module_loader.cc  edge_pipe_wrap.cc  edge_process.cc  edge_runtime.cc  edge_runtime.h  edge_runtime_platform_v8.cc  edge_stream_base.cc  edge_task_queue.cc  edge_tcp_wrap.cc  edge_timers_host.cc  edge_tls_wrap.cc  edge_tty_wrap.cc  edge_udp_wrap.cc  edge_util.cc  edge_worker_env.cc  edge_worker_env.h  node_api.cc
ubi/: CMakeLists.txt
unode/: CMakeLists.txt  README.md  ROADMAP.md  TEST_STRATEGY.md
(+285 files in other folders)
